Issue #2015789 by fubhy, echoz, rteijeiro, LewisNyman, penyaskito: Remove language_css_alter() (RTL stylesheets) in favor of HTML 'dir' attribute.

--- a/misc/vertical-tabs.css
+++ b/misc/vertical-tabs.css
@@ -3,6 +3,10 @@
   margin: 1em 0 1em 15em; /* LTR */
   border: 1px solid #ccc;
 }
+[dir="rtl"] .vertical-tabs {
+   margin-left: 0;
+   margin-right: 15em;
+}
 .vertical-tabs .vertical-tabs-list {
   width: 15em;
   list-style: none;
@@ -11,10 +15,20 @@
   margin: -1px 0 -1px -15em; /* LTR */
   float: left; /* LTR */
 }
+[dir="rtl"] .vertical-tabs .vertical-tabs-list {
+  margin-left: 0;
+  margin-right: -15em;
+  float: right;
+}
 .vertical-tabs fieldset.vertical-tabs-pane {
   margin: 0 !important;
   padding: 0 1em;
   border: 0;
+}
+[dir="rtl"] .vertical-tabs-list {
+  float: right;
+  margin-left: 0;
+  margin-right: -15em;
 }
 fieldset.vertical-tabs-pane > legend {
   display: none;
@@ -44,6 +58,10 @@ fieldset.vertical-tabs-pane > legend {
 .vertical-tabs .vertical-tabs-list .selected {
   background-color: #fff;
   border-right-width: 0; /* LTR */
+}
+[dir="rtl"] .vertical-tabs .vertical-tabs-list .selected {
+  border-left-width: 0;
+  border-right-width: 1px;
 }
 .vertical-tabs .vertical-tabs-list .selected strong {
   color: #000;
