--- a/modules/book/book.theme.css
+++ b/modules/book/book.theme.css
@@ -29,6 +29,10 @@
   text-align: left; /* LTR */
   width: 45%;
 }
+[dir="rtl"] .book-pager .previous {
+  float: right;
+  text-align: right;
+}
 .book-pager .up {
   text-align: center;
   width: 8%;
@@ -37,4 +41,8 @@
   float: right; /* LTR */
   text-align: right; /* LTR */
   width: 45%;
+}
+[dir="rtl"] .book-pager .next {
+  float: left;
+  text-align: left;
 }
