--- a/modules/comment/comment.css
+++ b/modules/comment/comment.css
@@ -5,6 +5,10 @@
 .indented {
   margin-left: 25px; /* LTR */
 }
+[dir="rtl"] .indented {
+  margin-left: 0;
+  margin-right: 25px;
+}
 .comment-unpublished {
   background-color: #fff4f4;
 }
