--- a/modules/contextual/contextual.css
+++ b/modules/contextual/contextual.css
@@ -25,6 +25,10 @@ div.contextual-links-wrapper {
   top: 2px;
   z-index: 999;
 }
+[dir="rtl"] div.contextual-links-wrapper {
+  left: 5px;
+  right: auto;
+}
 .js div.contextual-links-wrapper {
   display: block;
 }
@@ -41,6 +45,9 @@ a.contextual-links-trigger {
   overflow: hidden;
   -moz-border-radius: 4px;
   border-radius: 4px;
+}
+[dir="rtl"] a.contextual-links-trigger {
+  text-indent: -90px;
 }
 a.contextual-links-trigger:hover,
 div.contextual-links-active a.contextual-links-trigger {
@@ -63,11 +70,18 @@ div.contextual-links-wrapper ul.contextual-links {
   padding: 0.25em 0;
   position: absolute;
   right: 0;
-  text-align: left;
+  text-align: left; /* LTR */
   top: 18px;
   white-space: nowrap;
   -moz-border-radius: 4px 0 4px 4px; /* LTR */
   border-radius: 4px 0 4px 4px; /* LTR */
+}
+[dir="rtl"] div.contextual-links-wrapper ul.contextual-links {
+  text-align: right;
+  -moz-border-radius: 0 4px 4px 4px;
+  border-radius: 0 4px 4px 4px;
+  left: 0;
+  right: auto;
 }
 a.contextual-links-trigger-active,
 div.contextual-links-active a.contextual-links-trigger,
@@ -88,7 +102,10 @@ ul.contextual-links li a {
   color: #333 !important;
   display: block;
   margin: 0.25em 0;
-  padding: 0.25em 1em 0.25em 0.5em;
+  padding: 0.25em 1em 0.25em 0.5em; /* LTR */
+}
+[dir="rtl"] ul.contextual-links li a {
+  padding: 0.25em 0.5em 0.25em 1em;
 }
 ul.contextual-links li a:hover {
   background-color: #bfdcee;
