--- a/modules/field/theme/field.css
+++ b/modules/field/theme/field.css
@@ -7,6 +7,10 @@
 .field-label-inline .field-items {
   float:left; /*LTR*/
 }
+[dir="rtl"] .field-label-inline .field-label,
+[dir="rtl"] .field-label-inline .field-items {
+  float: right;
+}
 
 /* Form display */
 form .field-multiple-table {
@@ -15,14 +19,22 @@ form .field-multiple-table {
 form .field-multiple-table th.field-label {
   padding-left: 0; /*LTR*/
 }
+[dir="rtl"] form .field-multiple-table th.field-label {
+  padding-right: 0;
+}
 form .field-multiple-table .field-multiple-drag {
   width: 30px;
   padding-right: 0; /*LTR*/
 }
+[dir="rtl"] form .field-multiple-table .field-multiple-drag {
+  padding-left: 0;
+}
 form .field-multiple-table .field-multiple-drag .tabledrag-handle {
   padding-right: .5em; /*LTR*/
 }
-
+[dir="rtl"] form .field-multiple-table .field-multiple-drag .tabledrag-handle {
+  padding-left: .5em;
+}
 form .field-add-more-submit {
   margin: .5em 0 0;
 }
