--- a/modules/locale/locale.css
+++ b/modules/locale/locale.css
@@ -17,12 +17,23 @@
    */
   width: 15em;
 }
+[dir="rtl"] #locale-translation-filter-form .form-item-language,
+[dir="rtl"] #locale-translation-filter-form .form-item-translation,
+[dir="rtl"] #locale-translation-filter-form .form-item-group {
+  float: right;
+  padding-left: .8em;
+  padding-right: 0;
+}
 #locale-translation-filter-form .form-type-select select {
   width: 100%;
 }
 #locale-translation-filter-form .form-actions {
   float: left; /* LTR */
   padding: 3ex 0 0 1em; /* LTR */
+}
+[dir="rtl"] #locale-translation-filter-form .form-actions {
+  float: right;
+  padding: 3ex 1em 0 0;
 }
 .language-switcher-locale-session a.active {
   color: #0062a0;
