--- a/modules/system/system.base.css
+++ b/modules/system/system.base.css
@@ -35,8 +35,14 @@
   background-position: 100% 2px; /* LTR */
   background-repeat: no-repeat;
 }
+[dir="rtl"] .js input.form-autocomplete {
+  background-position: 0% 2px;
+}
 .js input.throbbing {
   background-position: 100% -18px; /* LTR */
+}
+[dir="rtl"] .js input.throbbing {
+  background-position: 0% -18px;
 }
 
 /**
@@ -98,6 +104,11 @@ body.drag {
   overflow: hidden;
   text-decoration: none;
 }
+[dir="rtl"] .draggable a.tabledrag-handle {
+  float: right;
+  margin-right: -1em;
+  margin-left: 0;
+}
 a.tabledrag-handle:hover {
   text-decoration: none;
 }
@@ -107,6 +118,10 @@ a.tabledrag-handle .handle {
   margin: -0.4em 0.5em; /* LTR */
   padding: 0.42em 0.5em; /* LTR */
   width: 13px;
+}
+[dir="rtl"] a.tabledrag-handle .handle {
+  margin: -0.4em 0.5em;
+  padding: 0.42em 0.5em;
 }
 a.tabledrag-handle-hover .handle {
   background-position: 6px -11px;
@@ -118,17 +133,31 @@ div.indentation {
   padding: 1em 0 1em 0.6em; /* LTR */
   width: 20px;
 }
+[dir="rtl"] div.indentation {
+  float: right;
+  margin: -1em -0.4em -1em 0.2em;
+  padding: 1em 0.6em 1em 0;
+}
 div.tree-child {
   background: url(../../misc/tree.png) no-repeat 11px center; /* LTR */
 }
+[dir="rtl"] div.tree-child {
+  background-position: -65px center;
+}
 div.tree-child-last {
   background: url(../../misc/tree-bottom.png) no-repeat 11px center; /* LTR */
+}
+[dir="rtl"] div.tree-child-last {
+  background-position: -65px center;
 }
 div.tree-child-horizontal {
   background: url(../../misc/tree.png) no-repeat -11px center;
 }
 .tabledrag-toggle-weight-wrapper {
   text-align: right; /* LTR */
+}
+[dir="rtl"] .tabledrag-toggle-weight-wrapper {
+  text-align: left;
 }
 
 /**
@@ -159,6 +188,9 @@ table.sticky-header {
 }
 .progress .percentage {
   float: right; /* LTR */
+}
+[dir="rtl"] .progress .percentage {
+  float: left;
 }
 /* Throbber */
 .ajax-progress {
