--- a/modules/dblog/dblog.css
+++ b/modules/dblog/dblog.css
@@ -69,6 +69,6 @@
 .admin-dblog .dblog-error .icon,
 .admin-dblog .dblog-critical .icon,
 .admin-dblog .dblog-alert .icon,
-.admin-dblog .dblog-emerg .icon {
+.admin-dblog .dblog-emergency .icon {
   background-image: url(../../misc/message-16-error.png);
 }
