--- a/modules/views/views_ui/css/views_ui.admin.css
+++ b/modules/views/views_ui/css/views_ui.admin.css
@@ -1,6 +1,6 @@
 /**
- * The .css file is intended to only contain positioning and size declarations
- * For example: display, position, float, clear, and overflow.
+ * The .admin.css file is intended to only contain positioning and size
+ * declarations. For example: display, position, float, clear, and overflow.
  */
 
 /* @group Resets */
