--- a/modules/views/views_ui/css/views_ui.admin.theme.css
+++ b/modules/views/views_ui/css/views_ui.admin.theme.css
@@ -1,6 +1,6 @@
 /**
- * The .theme.css file is intended to contain presentation declarations including
- * images, borders, colors, and fonts.
+ * The .admin.theme.css file is intended to contain presentation declarations
+ * including images, borders, colors, and fonts.
  */
 
 /* @group Reset */
