--- a/modules/system/css/system.theme.css
+++ b/modules/system/css/system.theme.css
@@ -301,7 +301,7 @@ ul li.collapsed {
   list-style-image: url(../../../misc/menu-collapsed-rtl.png);
 }
 ul li.leaf {
-  list-style-image: url(../../misc/menu-leaf.png);
+  list-style-image: url(../../../misc/menu-leaf.png);
   list-style-type: square;
 }
 li.expanded,
@@ -436,7 +436,7 @@ div.messages {
 }
 
 div.status {
-  background-image: url(../../misc/message-24-ok.png);
+  background-image: url(../../../misc/message-24-ok.png);
   border-color: #be7;
 }
 div.status,
@@ -449,7 +449,7 @@ table tr.ok {
 }
 
 div.warning {
-  background-image: url(../../misc/message-24-warning.png);
+  background-image: url(../../../misc/message-24-warning.png);
   border-color: #ed5;
 }
 div.warning,
@@ -462,7 +462,7 @@ table tr.warning {
 }
 
 div.error {
-  background-image: url(../../misc/message-24-error.png);
+  background-image: url(../../../misc/message-24-error.png);
   border-color: #ed541d;
 }
 div.error,
